# db-rs

./: .gitignore  Cargo.toml  README.md  client.py  data-flow.drawio  demo_client.py  notes  perf_results.txt  requirements.txt  test_queries.sql  touch_config.toml
.github/workflows/: ci.yml
clients/python3/: main.py  requirements.txt  touch_config.toml
docs/: arch.md
src/: background_merge.rs  config.rs  engine.rs  error.rs  main.rs  protocol.rs  runtime_config.rs  tcp_io_parser.rs
src/commands/: create.rs  echo.rs  help.rs  insert.rs  mod.rs  ping.rs
src/engines/: merge_tree.rs  mod.rs  replacing_merge_tree.rs
src/protocol/: command.rs  mod.rs  protocol_parser.rs
src/sql/: command_runner.rs  compiled_filter.rs  mod.rs  sql_parser.rs
src/sql/execution/: create.rs  create_database.rs  create_table.rs  drop.rs  insert.rs  mod.rs  select.rs
src/sql/logical_plan/: create_database.rs  create_table.rs  drop.rs  insert.rs  mod.rs  select.rs
src/sql/plan_optimization/: mod.rs  query_flattening.rs
src/storage/: column_header.rs  compression.rs  mod.rs  part.rs  table_metadata.rs  table_part.rs  value.rs
