[package]
name = "touchhouse"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
futures = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.0"
crc32fast = "1.5.0"
