[package]
name = "touchhouse"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
futures = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.0"
crc32fast = "1.5.0"
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }
sqlparser = "0.59.0"
derive_more = { version = "2.0.1", features = ["display"] }
bincode = { version = "2.0.1", features = ["serde", "std"] }
lz4 = "1.28.1"
dashmap = "6.1.0"
